# zj-smart-sessions

./: .gitignore  Cargo.toml  README.md  find_command  flake.nix  justfile
.github/workflows/: release.yml
src/: lib.rs  new_session_list.rs  session_list.rs
