[package]
name = "zj-smart-sessions"
version = "0.1.0"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zj-smart-sessions"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.40.1"
rust-fuzzy-search = "0.1.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
