[package]
name = "zj-smart-sessions"
version = "0.3.0"
authors = ["Daniel Jankowski"]
edition = "2018"

[[bin]]
name = "zj-smart-sessions"
bench = false

[lib]
bench = false

[features]
bench = []
tracing = []

[dependencies]
zellij-tile = "0.41.2"
rust-fuzzy-search = "0.1.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
fuzzy-matcher = "0.3.7"
